RESOLVED FIXED271382
[WebGPU] Partial 3D image_copy tests are failing
https://bugs.webkit.org/show_bug.cgi?id=271382
Summary [WebGPU] Partial 3D image_copy tests are failing
Mike Wyrzykowski
Reported 2024-03-21 08:07:13 PDT
There are some 3D partial buffer copy tests which do not pass
Attachments
Radar WebKit Bug Importer
Comment 1 2024-03-21 08:08:43 PDT
Mike Wyrzykowski
Comment 2 2024-03-21 14:42:25 PDT
EWS
Comment 3 2024-03-25 13:50:22 PDT
Committed 276649@main (4a40e77e0642): <https://commits.webkit.org/276649@main> Reviewed commits have been landed. Closing PR #26266 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.